# opengl-playground

./: .gitattributes  .gitignore  README.md
opengl-lab-glfw/: CMakeLists.txt  README.md
opengl-lab-glfw/01-empty-window/: CMakeLists.txt  main.cpp  window.cpp  window.h
opengl-lab-glfw/02-first-triangle/: CMakeLists.txt  main.cpp  shader.fsh  window.cpp  window.h
opengl-lab-glfw/02a-first-triangle-ebo/: CMakeLists.txt  shader.vsh  shader2.fsh  window.cpp  window.h
opengl-lab-glfw/03-basic-vertex-shader/: CMakeLists.txt  main.cpp  shader.vsh  window.cpp  window.h
opengl-lab-glfw/04-basic-fragment-shader/: CMakeLists.txt  main.cpp  shader.fsh  shader.vsh  window.cpp  window.h
opengl-lab-glfw/opengl-wrapper/: logger.h  openglarraybuffer.cpp  openglarraybuffer.h  openglcolorvertex.h  openglelementarraybuffer.cpp  openglelementarraybuffer.h  openglshaderprogram.cpp  openglshaderprogram.h  openglvertex.h  openglvertexarray.cpp  openglvertexarray.h  openglwindow.cpp  openglwindow.h  simpletimer.h
opengl-lab-glfw/opengl-wrapper/glad/include/glad/: glad.h
opengl-lab-glfw/opengl-wrapper/glad/src/: glad.c
opengl-lab-qt/: README.md
opengl-lab-qt/01-empty-window/: 01-empty-window.pro  main.cpp  window.cpp  window.h
opengl-lab-qt/opengl-wrapper/: opengl-wrapper.pri  openglwindow.cpp  openglwindow.h
opengl-tutorial-qt/: README.md  opengl-tutorial-qt.pro
opengl-tutorial-qt/00_opengl_window/: 00_opengl_window.pro  window.cpp  window.h
opengl-tutorial-qt/01_basic_rendering/: 01_basic_rendering.pro  shader.vert  vertex.h  window.cpp  window.h
opengl-tutorial-qt/02_3d_rendering/: main.cpp  shader.frag  shader.vert  vertex.h  window.cpp  window.h
